fix/changed junit version and the corresponding tests - also some bugs because of castings of immutable lists